[package]
name = "overseer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.79"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["json", "cookies"] }
scraper = "0.19.0"
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.113"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
getrandom = { version = "0.2", features = ["js"] }

[features]
wasm = []
